# research-git

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-06-16-research-git-v1-memory-loop.md  2026-06-16-research-git-v2-graph-intelligence.md  2026-06-27-research-git-v3-research-layer.md  2026-06-28-rgit-graph-export.md  (+10 more)
src/rgit/: __init__.py  ablation.py  agent_guidance.py  agent_platforms.py  astmap.py  capture_history.py  cli.py  compare.py  compose.py  curation.py  digestqueue.py  digestscan.py  doctor.py  edges.py  gitutil.py  graphview.py  hooks.py  installer.py  mcp_server.py  metricdir.py  metrics.py  provenance.py  ranking.py  recall.py  runner.py  segmenter.py  selfupdate.py  tables.py  toggles.py  updatecheck.py  watch.py
tests/: conftest.py  test_ablation.py  test_active_edges.py  test_agent_guidance.py  test_astmap.py  test_capture_history.py  test_cli.py  test_cli_update.py  test_compare.py  test_compose.py  test_curation.py  test_db.py  test_digestqueue.py  test_digestscan.py  test_doctor.py  test_e2e.py  test_edges.py  test_gitutil.py  test_graphview.py  test_guidance_coupling.py  test_hooks.py  test_installer.py  test_mcp_server.py  test_metricdir.py  test_metricdir_store.py  test_metrics.py  test_models.py  test_objects.py  test_provenance.py  test_ranking.py  test_recall.py  test_review_fixes.py  test_runner.py  test_segmenter.py  test_selfupdate.py  test_store.py  test_tables.py  test_toggles.py  test_updatecheck.py  test_watch.py
(+28 files in other folders)
